prevent text overlapping on client dashboard
https://t.essentiasoftserv.com/project/lifeforce-milife/issue/8

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -270,7 +270,7 @@ input[type='number'] {
 
 //heading-font1
 .heading-1{
-    font-size: 35pt;
+    font-size: 28pt;
     font-weight: normal;
     font-style: normal;
     letter-spacing: 0.32pt;
